--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
     "build": "webpack",
     "dev-server": "webpack-dev-server"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CryptoCoolby/git-repo-search.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CryptoCoolby/git-repo-search/issues"
+  },
   "description": ""
 }
